--- a/FlexTimeTable/FlexTimeTable.vbproj
+++ b/FlexTimeTable/FlexTimeTable.vbproj
@@ -117,6 +117,8 @@
     <Content Include="Login.aspx" />
     <Content Include="member\ClassSummary.aspx" />
     <Content Include="member\lecturerWorkload.aspx" />
+    <Content Include="mResAd\assignDepartment.aspx" />
+    <Content Include="mResAd\assignSubject.aspx" />
     <Content Include="mSysAd\generateTimetable.aspx" />
     <Content Include="mSysAd\uploadSubject.aspx" />
     <Content Include="mSysAd\uploadQual.aspx" />
@@ -180,6 +182,19 @@
     <Compile Include="App_Code\departmentEvent.vb" />
     <Compile Include="App_Code\filetotableconversion.vb" />
     <Compile Include="App_Code\general.vb" />
+    <Compile Include="mSysAd\uploadClasses.aspx.designer.vb">
+      <DependentUpon>uploadClasses.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="mSysAd\uploadQual.aspx.designer.vb">
+      <DependentUpon>uploadQual.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="NoAjaxFlex.Master.designer.vb">
+      <DependentUpon>NoAjaxFlex.Master</DependentUpon>
+    </Compile>
+    <Compile Include="NoAjaxFlex.Master.vb">
+      <DependentUpon>NoAjaxFlex.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Login.aspx.designer.vb">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
@@ -201,6 +216,20 @@
       <DependentUpon>lecturerWorkload.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="mResAd\assignDepartment.aspx.designer.vb">
+      <DependentUpon>assignDepartment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="mResAd\assignDepartment.aspx.vb">
+      <DependentUpon>assignDepartment.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="mResAd\assignSubject.aspx.designer.vb">
+      <DependentUpon>assignSubject.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="mResAd\assignSubject.aspx.vb">
+      <DependentUpon>assignSubject.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="mResAd\manageclusterclasses.aspx.designer.vb">
       <DependentUpon>manageclusterclasses.aspx</DependentUpon>
     </Compile>
@@ -217,9 +246,6 @@
     <Compile Include="mSysAd\uploadSubject.aspx.vb">
       <DependentUpon>uploadSubject.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
-    </Compile>
-    <Compile Include="mSysAd\uploadQual.aspx.designer.vb">
-      <DependentUpon>uploadQual.aspx</DependentUpon>
     </Compile>
     <Compile Include="mSysAd\uploadQual.aspx.vb">
       <DependentUpon>uploadQual.aspx</DependentUpon>
@@ -287,9 +313,6 @@
     </Compile>
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="mSysAd\uploadClasses.aspx.designer.vb">
-      <DependentUpon>uploadClasses.aspx</DependentUpon>
     </Compile>
     <Compile Include="mSysAd\uploadClasses.aspx.vb">
       <DependentUpon>uploadClasses.aspx</DependentUpon>
@@ -499,6 +522,7 @@
       <LastGenOutput>dbcontext.Designer.vb</LastGenOutput>
     </EntityDeploy>
     <None Include="bin\vsD3C8.tmp" />
+    <Content Include="NoAjaxFlex.Master" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
