--- a/FlexTimeTable/FlexTimeTable.vbproj
+++ b/FlexTimeTable/FlexTimeTable.vbproj
@@ -115,24 +115,24 @@
     <Content Include="bin\FlexTimeTable.xml" />
     <Content Include="images\ajax-loader.gif" />
     <Content Include="Login.aspx" />
-    <Content Include="mResAd\assignQualification.aspx" />
+    <Content Include="Scripts\mResAd\assignQualification.aspx" />
     <Content Include="mSysAd\NormalSubject.aspx" />
     <Content Include="qualificationsearch.aspx" />
     <Content Include="subjectsearch.aspx" />
     <Content Include="member\ClassSummary.aspx" />
     <Content Include="member\lecturerWorkload.aspx" />
-    <Content Include="mResAd\assignDepartment.aspx" />
-    <Content Include="mResAd\assignSubject.aspx" />
+    <Content Include="Scripts\mResAd\assignDepartment.aspx" />
+    <Content Include="Scripts\mResAd\assignSubject.aspx" />
     <Content Include="mSysAd\generateTimetable.aspx" />
     <Content Include="mSysAd\uploadSubject.aspx" />
     <Content Include="mSysAd\uploadQual.aspx" />
-    <Content Include="mResAd\manageclusterclasses.aspx" />
-    <Content Include="mResAd\managelecturer.aspx" />
-    <Content Include="mResAd\managedepartment.aspx" />
-    <Content Include="mResAd\managesubject.aspx" />
-    <Content Include="mResAd\manageprogramme.aspx" />
-    <Content Include="mResAd\managequalification.aspx" />
-    <Content Include="mResAd\manageschool.aspx" />
+    <Content Include="Scripts\mResAd\manageclusterclasses.aspx" />
+    <Content Include="Scripts\mResAd\managelecturer.aspx" />
+    <Content Include="Scripts\mResAd\managedepartment.aspx" />
+    <Content Include="Scripts\mResAd\managesubject.aspx" />
+    <Content Include="Scripts\mResAd\manageprogramme.aspx" />
+    <Content Include="Scripts\mResAd\managequalification.aspx" />
+    <Content Include="Scripts\mResAd\manageschool.aspx" />
     <Content Include="images\wsulogo.gif" />
     <Content Include="mSysAd\uploadClasses.aspx" />
     <Content Include="mSysAd\AcademicBlock.aspx" />
@@ -186,10 +186,10 @@
     <Compile Include="App_Code\departmentEvent.vb" />
     <Compile Include="App_Code\filetotableconversion.vb" />
     <Compile Include="App_Code\general.vb" />
-    <Compile Include="mResAd\assignQualification.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\assignQualification.aspx.designer.vb">
       <DependentUpon>assignQualification.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\assignQualification.aspx.vb">
+    <Compile Include="Scripts\mResAd\assignQualification.aspx.vb">
       <DependentUpon>assignQualification.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
@@ -248,21 +248,21 @@
       <DependentUpon>lecturerWorkload.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\assignDepartment.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\assignDepartment.aspx.designer.vb">
       <DependentUpon>assignDepartment.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\assignDepartment.aspx.vb">
+    <Compile Include="Scripts\mResAd\assignDepartment.aspx.vb">
       <DependentUpon>assignDepartment.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\assignSubject.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\assignSubject.aspx.designer.vb">
       <DependentUpon>assignSubject.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\assignSubject.aspx.vb">
+    <Compile Include="Scripts\mResAd\assignSubject.aspx.vb">
       <DependentUpon>assignSubject.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\manageclusterclasses.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\manageclusterclasses.aspx.designer.vb">
       <DependentUpon>manageclusterclasses.aspx</DependentUpon>
     </Compile>
     <Compile Include="mSysAd\generateTimetable.aspx.designer.vb">
@@ -283,49 +283,49 @@
       <DependentUpon>uploadQual.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\manageclusterclasses.aspx.vb">
+    <Compile Include="Scripts\mResAd\manageclusterclasses.aspx.vb">
       <DependentUpon>manageclusterclasses.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\managelecturer.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\managelecturer.aspx.designer.vb">
       <DependentUpon>managelecturer.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\managelecturer.aspx.vb">
+    <Compile Include="Scripts\mResAd\managelecturer.aspx.vb">
       <DependentUpon>managelecturer.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="mResAd\managedepartment.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\managedepartment.aspx.designer.vb">
       <DependentUpon>managedepartment.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\managedepartment.aspx.vb">
+    <Compile Include="Scripts\mResAd\managedepartment.aspx.vb">
       <DependentUpon>managedepartment.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\managesubject.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\managesubject.aspx.designer.vb">
       <DependentUpon>managesubject.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\managesubject.aspx.vb">
+    <Compile Include="Scripts\mResAd\managesubject.aspx.vb">
       <DependentUpon>managesubject.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\manageprogramme.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\manageprogramme.aspx.designer.vb">
       <DependentUpon>manageprogramme.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\manageprogramme.aspx.vb">
+    <Compile Include="Scripts\mResAd\manageprogramme.aspx.vb">
       <DependentUpon>manageprogramme.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\managequalification.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\managequalification.aspx.designer.vb">
       <DependentUpon>managequalification.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\managequalification.aspx.vb">
+    <Compile Include="Scripts\mResAd\managequalification.aspx.vb">
       <DependentUpon>managequalification.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="mResAd\manageschool.aspx.designer.vb">
+    <Compile Include="Scripts\mResAd\manageschool.aspx.designer.vb">
       <DependentUpon>manageschool.aspx</DependentUpon>
     </Compile>
-    <Compile Include="mResAd\manageschool.aspx.vb">
+    <Compile Include="Scripts\mResAd\manageschool.aspx.vb">
       <DependentUpon>manageschool.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
@@ -548,7 +548,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="mVenAd\web.config" />
-    <Content Include="mResAd\web.config" />
+    <Content Include="Scripts\mResAd\web.config" />
     <EntityDeploy Include="App_Code\dbcontext.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>dbcontext.Designer.vb</LastGenOutput>
