--- a/FlexTimeTable/web.config
+++ b/FlexTimeTable/web.config
@@ -23,6 +23,7 @@
     <add key="defaultClassMaxMergedSlots" value="2" />
     <!--dummy faculty-->
     <add key="dummyfaculty" value="999" />
+    <add key="dummyDepartment" value="309" />
   </appSettings>
   <connectionStrings>
     <remove name="LocalMySqlServer" />
